fixing readability

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -194,6 +194,6 @@ li{
     box-shadow: 0 7px 9px 1px rgba(0, 10, 20, 0.2);
     border-radius: 5rem;
     color: white;
-    font-size: 1.2rem;
+    font-size: 2rem;
     padding: 1rem;
 }
